projects/compiler/test/parser/match_error_case_invalid_variant.out
Error at %FILE_NAME%:3:7
Unexpected token 'identifier', expected '.':
  |    Int i => i + 1
           ^